# ContentFilter

./: .claudeignore  .gitignore  BACKLOG.md  CLAUDE.md  Cargo.toml  KNOWLEDGE.md  MEMO.md  README.md  RULES.md  STATE.md  THREAT_MODEL.md  create_backlog.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml
core/src/: approval.rs  device.rs  event.rs  filter_state.rs  hashchain.rs  hex.rs  household.rs  ids.rs  keys.rs  lib.rs  relay_client.rs  request_auth.rs  sealing.rs  timeanchor.rs  version.rs  weakening.rs
docs/: KEY_CEREMONY.md  REPRODUCIBLE_BUILDS.md
guardian/: Cargo.toml
guardian/src/: main.rs
harness/: Cargo.toml  README.md
harness/src/: dns.rs  egress.rs  lib.rs
harness/tests/: dns_and_egress.rs
installer/custom-actions/: Cargo.toml
installer/custom-actions/src/: lib.rs
keys/: README.md
relay/: Cargo.toml
relay/src/: auth.rs  email.rs  feeds.rs  http.rs  lib.rs  log.rs  mailbox.rs  main.rs  registry.rs  silence.rs
relay/tests/: bootstrap.rs  structured_logs.rs
screen-cv/: Cargo.toml
screen-cv/src/: main.rs
service/: Cargo.toml
service/src/: acl.rs  anchor.rs  config.rs  lib.rs  logging.rs  main.rs  scm.rs
service/tests/: scm_lifecycle.rs
tools/: build_release.sh  check_no_private_keys.sh  fingerprint.sh  verify_release.sh
tray/: Cargo.toml
tray/src/: main.rs
