[package]
name = "cf-core"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["zeroize"] }

[dev-dependencies]
serde_json = "1"
