[package]
name = "cf-core"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["zeroize"] }
crypto_box = { version = "0.9", features = ["seal"] }
rand_core = { version = "0.6", features = ["getrandom"] }
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
serde_json = "1"
