[package]
name = "cf-relay"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "cf_relay"
path = "src/lib.rs"

[[bin]]
name = "cf-relay"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
cf-core = { path = "../core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "time"] }
axum = "0.7"
hyper-util = { version = "0.1.20", features = ["server-auto", "server-graceful", "tokio", "service"] }
# default-features off: rustls 0.23 otherwise pulls aws-lc-sys, a C library
# needing cmake to build. Given the effort core-repro-builds already spent
# getting pure-Rust, no-C-toolchain reproducible builds working, adding a C
# compilation step here would be a step backward for no real benefit —
# ring is a mature, widely-used pure-Rust alternative backend.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tempfile = "3"
serde_json = "1"
