[package]
name = "cf-relay"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "cf_relay"
path = "src/lib.rs"

[[bin]]
name = "cf-relay"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
cf-core = { path = "../core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "time"] }
axum = "0.7"
hyper-util = { version = "0.1.20", features = ["server-auto", "server-graceful", "tokio", "service"] }
# default-features off: rustls 0.23 otherwise pulls aws-lc-sys, a C library
# needing cmake to build. Given the effort core-repro-builds already spent
# getting pure-Rust, no-C-toolchain reproducible builds working, adding a C
# compilation step here would be a step backward for no real benefit —
# ring is a mature, widely-used pure-Rust alternative backend.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
# Beacon signing (relay-timeanchor); same dalek cf-core already uses.
ed25519-dalek = "2"
# Pairing codes and relay-minted ids need a CSPRNG; ring is already the
# rustls crypto backend in this graph, so this adds no new compiled code.
ring = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { version = "1", features = ["derive"] }
# Feed files on disk are FeedEnvelope JSON (relay-feeds).
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tempfile = "3"
# Router::oneshot for endpoint tests without a TLS listener.
tower = { version = "0.4", features = ["util"] }
